--- a/p/rust学习随笔-复合类型/index.html
+++ b/p/rust学习随笔-复合类型/index.html
@@ -69,7 +69,7 @@
         
         <div class="site-meta">
             <h1 class="site-name"><a href="/">Figureair&#39;s Blog</a></h1>
-            <h2 class="site-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+            <h2 class="site-description">No cross, no crown.</h2>
         </div>
     </header><ol class="social-menu">
             
